清理倉庫：移除本地部署腳本和不必要的檔案
- 移除 deploy_to_github.bat 和 deploy_to_github.sh（本地使用）
- 移除 GITHUB_DEPLOYMENT.md（部署說明檔案）
- 更新 .gitignore 排除部署腳本和其他不必要檔案
- 保持倉庫整潔，只包含專案核心檔案

--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,11 @@ cython_debug/
 # Application specific
 # ==================
 
+# 部署腳本 (本地使用，不需要上傳)
+deploy_to_github.bat
+deploy_to_github.sh
+GITHUB_DEPLOYMENT.md
+
 # 虛擬環境
 .venv/
 venv/
